--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -21,7 +21,7 @@
 		<div class="row"> 
 		<!-- This is first row with logo and title -->
 			<div class="col-md-6">
-				<img class="title-logo" src="http://placehold.it/180/180" alt="Contemplating Tech">
+				<img class="title-logo" src="./images/LogoColorNoText250x250.jpg" alt="Contemplating Tech">
 			</div>
 			<div class="col-md-6 text-right text-uppercase">
 				<h1 class="title-super text-thin">Michael Shea</h1>
@@ -38,7 +38,7 @@
 		<div class="row">
 		<!-- This is 2nd row with the code image spanning across page -->
 			<div class="col-md-12">
-			<img class="img-responsive" src="./images/code-1280-853.jpg" alt="main image">
+			<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
 			<!-- image from http://pixabay.com/en/code-technology-software-internet-459070/ -->
 			</div>
 		</div>
@@ -51,22 +51,22 @@
 
 		<div class="row text-center">
 			<div class="col-md-4">
-				<!-- <p><img src="http://placepuppy.it/300/200"></p> -->
-				<img class="img-responsive" src="http://placepuppy.it/300/200" alt="text" data-toggle="modal" data-target="#project1">
-				<h3 class="text-uppercase">project title here</h3>
-				<a href="some link">link text</a>
+				<!-- Image source: http://pixabay.com/en/blogging-social-media-439151/ -->
+				<img class="img-responsive" src="./images/blogging-640.jpg" alt="Contemplating Tech" data-toggle="modal" data-target="#project1">
+				<h3 class="text-uppercase">The Blog</h3>
+				<a href="http://www.contemplatingtech.com">Contemplating Tech</a>
+			</div>
+			<div class="col-md-4">
+				<!-- Imge source: http://pixabay.com/en/people-user-meeting-me-employee-23356/ -->
+				<img class="img-responsive" src="./images/people-640.png" alt="About Me">
+				<h3 class="text-uppercase">the it guy you don't know</h3>
+				<a href="http://about.me/emtshea">About.Me</a>
 			</div>
 			<div class="col-md-4">
 				<!-- <p><img src="http://placepuppy.it/300/200"></p> -->
-				<img class="img-responsive" src="http://placepuppy.it/300/200" alt="text">
-				<h3 class="text-uppercase">project title here</h3>
-				<a href="some link">link text</a>
-			</div>
-			<div class="col-md-4">
-				<!-- <p><img src="http://placepuppy.it/300/200"></p> -->
-				<img class="img-responsive" src="http://placepuppy.it/300/200" alt="text">
-				<h3 class="text-uppercase">project title here</h3>
-				<a href="some link">link text</a>
+				<img class="img-responsive" src="./images/spacecode-640.jpg" alt="GitHub">
+				<h3 class="text-uppercase">My GitHub Projects</h3>
+				<a href="http://github.com/LottaJavaMike">GitHub</a>
 			</div>
 		</div>
 	</div>
@@ -77,11 +77,11 @@ labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+				<h4 class="modal-title" id="myModalLabel">ContemplatingTech</h4>
 			</div>
 			<div class="modal-body">
-				<img class="img-responsive" src="http://placepuppy.iy/300/200">
-				This was my first project using Modal.
+				<img class="img-responsive" src="./images/blogging-640.jpg">
+				This is my personal brain dumping ground for most things tech.  I've been at the desktop support thing for 20+ years now...there might be a bit
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
