Add _blank href targets and image rounding

--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -52,21 +52,21 @@
 		<div class="row text-center">
 			<div class="col-md-4">
 				<!-- Image source: http://pixabay.com/en/blogging-social-media-439151/ -->
-				<img class="img-responsive" src="./images/blogging-640.jpg" alt="Contemplating Tech" data-toggle="modal" data-target="#project1">
+				<img class="img-responsive img-rounded" src="./images/blogging-640.jpg" alt="Contemplating Tech" data-toggle="modal" data-target="#project1">
 				<h3 class="text-uppercase">The Blog</h3>
-				<a href="http://www.contemplatingtech.com">Contemplating Tech</a>
+				<a href="http://www.contemplatingtech.com" target="_blank">Contemplating Tech</a>
 			</div>
 			<div class="col-md-4">
 				<!-- Imge source: http://pixabay.com/en/people-user-meeting-me-employee-23356/ -->
-				<img class="img-responsive" src="./images/people-640.png" alt="About Me">
+				<img class="img-responsive img-rounded" src="./images/people-640.png" alt="About Me">
 				<h3 class="text-uppercase">the it guy you don't know</h3>
-				<a href="http://about.me/emtshea">About.Me</a>
+				<a href="http://about.me/emtshea" target="_blank">About.Me</a>
 			</div>
 			<div class="col-md-4">
 				<!-- <p><img src="http://placepuppy.it/300/200"></p> -->
-				<img class="img-responsive" src="./images/spacecode-640.jpg" alt="GitHub">
+				<img class="img-responsive img-rounded" src="./images/spacecode-640.jpg" alt="GitHub">
 				<h3 class="text-uppercase">My GitHub Projects</h3>
-				<a href="http://github.com/LottaJavaMike">GitHub</a>
+				<a href="http://github.com/LottaJavaMike" target="_blank">GitHub</a>
 			</div>
 		</div>
 	</div>
