Add readme and comments in code

--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Framework Test page</title>
-	<!-- <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.cs"> -->
+	<title>Mike Shea's Portfolio</title>
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/main.css">
@@ -30,13 +29,14 @@
 		</div>
 		
 		<div class="row">
+			<!-- This 2nd row is for the horizontal rule -->
 			<div class="col-md-12">
 				<hr>
 			</div>
 		</div>
 
 		<div class="row">
-		<!-- This is 2nd row with the code image spanning across page -->
+		<!-- This is 3rd row with the code image spanning across page -->
 			<div class="col-md-12">
 			<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
 			<!-- image from http://pixabay.com/en/code-technology-software-internet-459070/ -->
@@ -44,12 +44,14 @@
 		</div>
 		
 		<div class="row">
+			<!-- 4th row is for the Featured Work section title -->
 			<div class="col-md-12 text-left">
 				<h2 class="text-muted">Featured Work</h2>
 			</div>
 		</div>
 
 		<div class="row text-center">
+		<!-- 5th row defines the space for the 3 features projects. Initially these point to blog, about.me, github -->
 			<div class="col-md-4">
 				<!-- Image source: http://pixabay.com/en/blogging-social-media-439151/ -->
 				<img class="img-responsive img-rounded" src="./images/blogging-640.jpg" alt="Contemplating Tech" data-toggle="modal" data-target="#project1">
@@ -63,7 +65,7 @@
 				<a href="http://about.me/emtshea" target="_blank">About.Me</a>
 			</div>
 			<div class="col-md-4">
-				<!-- <p><img src="http://placepuppy.it/300/200"></p> -->
+				<!-- img src http://pixabay.com/en/space-earth-bug-program-code-19070-->
 				<img class="img-responsive img-rounded" src="./images/spacecode-640.jpg" alt="GitHub">
 				<h3 class="text-uppercase">My GitHub Projects</h3>
 				<a href="http://github.com/LottaJavaMike" target="_blank">GitHub</a>
@@ -72,6 +74,7 @@
 	</div>
 
 <!--Modal-->
+<!-- included in Proj1 for interactivity, will probably get removed for remaining projects -->
 <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-
 labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
@@ -80,7 +83,7 @@ labelledby="myModalLabel" aria-hidden="true">
 				<h4 class="modal-title" id="myModalLabel">ContemplatingTech</h4>
 			</div>
 			<div class="modal-body">
-				<img class="img-responsive" src="./images/blogging-640.jpg">
+				<img class="img-responsive" src="./images/blogging-640.jpg" alt="Contemplating Tech">
 				This is my personal brain dumping ground for most things tech.  I've been at the desktop support thing for 20+ years now...there might be a bit
 			</div>
 			<div class="modal-footer">
