--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mike Shea's Portfolio</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'> -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/main.css">
 
@@ -14,8 +15,8 @@
 </head>
 <body>
 	<header>
-		<div class="container">	
-			<div class="row"> 
+		<div class="container">
+			<div class="row">
 			<!-- This is first row with logo and title -->
 				<div class="col-md-6">
 					<img class="title-logo" src="./images/LogoColorNoText250x250.jpg" alt="Contemplating Tech">
@@ -41,7 +42,7 @@
 				<!-- image from http://pixabay.com/en/code-technology-software-internet-459070/ -->
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<!-- 4th row is for the Featured Work section title -->
 				<div class="col-md-12 text-left">
