Try to add fixed background image

--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/main.css">
 
-	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<!-- <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> -->
+	<!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
 	<header>
@@ -35,13 +35,11 @@
 				</div>
 			</div>
 
-			<div class="row">
-			<!-- This is 3rd row with the code image spanning across page -->
+			<!-- <div class="row">
 				<div class="col-md-12">
 				<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
-				<!-- image from http://pixabay.com/en/code-technology-software-internet-459070/ -->
 				</div>
-			</div>
+			</div> -->
 
 			<div class="row">
 				<!-- 4th row is for the Featured Work section title -->
