fix static background image

--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -15,7 +15,6 @@
 </head>
 <body>
 	<header>
-		<div class="container">
 			<div class="row">
 			<!-- This is first row with logo and title -->
 				<div class="col-md-6">
@@ -28,6 +27,7 @@
 			</div>
 	</header>
 	<main>
+		<div class="container">
 			<div class="row">
 				<!-- This 2nd row is for the horizontal rule -->
 				<div class="col-md-12">
@@ -35,11 +35,11 @@
 				</div>
 			</div>
 
-			<!-- <div class="row">
+			<div class="row">
 				<div class="col-md-12">
-				<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
+				<<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
 				</div>
-			</div> -->
+			</div>
 
 			<div class="row">
 				<!-- 4th row is for the Featured Work section title -->
