correct static background image and change font color

--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mike Shea's Portfolio</title>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'> -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> -->
@@ -37,7 +37,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-				<<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
+				<img class="img-responsive" src="./images/socialimage.jpg" alt="main image">
 				</div>
 			</div>
 
